packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/daemonset-allowed-unchanged.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: api-access-allowed-daemon
  namespace: update-automountserviceaccounttokens-2
spec:
  template:
    spec:
      automountServiceAccountToken: false
