packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/daemonset-allowed.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: api-access-allowed-daemon
  namespace: update-automountserviceaccounttokens-2
spec:
  selector:
    matchLabels:
      app: api-access-allowed-daemon
  template:
    metadata:
      labels:
        app: api-access-allowed-daemon
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 0
      securityContext:
        runAsNonRoot: true
      containers:
        - name: test
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
          command: ["true"]
          securityContext:
            capabilities:
              drop:
                - ALL
