packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/deployment-allowed-mutated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-access-allowed-live
  namespace: update-automountserviceaccounttokens-2
spec:
  template:
    spec:
      automountServiceAccountToken: true
