packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: update-automountserviceaccounttokens-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: update-automountserviceaccounttokens-other
