packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-allowed-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-allowed-live
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: true
