packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-denied-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-denied-live
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: false
