packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-other-ns-unchanged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-allowed-elsewhere
  namespace: update-automountserviceaccounttokens-other
spec:
  automountServiceAccountToken: true
