packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-other-ns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-allowed-elsewhere
  namespace: update-automountserviceaccounttokens-other
spec:
  automountServiceAccountToken: true
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
