packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-overlap-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-overlap-live
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: false
