packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-unmatched-unchanged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-api-plz-live
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: true
