packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/pod-unmatched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-api-plz-live
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: true
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
