packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/policy-ready-serviceaccounts.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: update-automountserviceaccounttokens-cel-serviceaccounts
status:
  conditionStatus:
            (conditions[?type == 'RBACPermissionsGranted']):
            - message: Policy is ready for reporting.
              reason: Succeeded
              status: "True"
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
