packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/sa-default-unchanged.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: default
  namespace: update-automountserviceaccounttokens-2
automountServiceAccountToken: true
