packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/sa-other-ns-unchanged.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: update-token-automount-wild-elsewhere
  namespace: update-automountserviceaccounttokens-other
automountServiceAccountToken: true
