packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/sa-target.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: update-token-automount-wild-live
  namespace: update-automountserviceaccounttokens-2
