packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/sa-unmatched-unchanged.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: not-in-any-regex
  namespace: update-automountserviceaccounttokens-2
automountServiceAccountToken: true
