packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/chainsaw-test/statefulset-allowed-mutated.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-access-allowed-stateful
  namespace: update-automountserviceaccounttokens-2
spec:
  template:
    spec:
      automountServiceAccountToken: true
